# me491_ros

./: Cat_Dog_ex.pptx
AruCo Markers/: .~lock.Cat_Dog_ex.pptx#
GazeboMap/: README.txt
GazeboMap/Capstone_Map/: model.config  model.sdf
devel/: .catkin  .rosinstall  setup.sh
devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
devel/include/readmarker/: markermsg.h
devel/include/ros_tutorials_topic/: MsgTutorial.h
devel/lib/aruco/: aruco_node
devel/lib/find_frontier/: find_frontier_node
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/pkgconfig/: aruco.pc  find_frontier.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  m_robot_description.pc  m_robot_gazebo.pc  readmarker.pc  ros_tutorials_topic.pc  webcam.pc
devel/lib/readmarker/: readmarker_node
devel/lib/ros_tutorials_topic/: topic_publisher  topic_subscriber
devel/lib/webcam/: webcam_node
src/: .~lock.Untitled 1.pptx#
src/find_frontier/launch/: hector_mapping.launch  move_base.launch  (+1 more)
src/readmarker/: CMakeLists.txt
src/ros_tutorials_topic/: CMakeLists.txt  package.xml
src/ros_tutorials_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
(+40 files in other folders)
